# TinySVM

./: .gitignore  Makefile.am  Makefile.bcc32  Makefile.bcc32.in  Makefile.in  aclocal.m4  config.h.bcc32  config.h.bcc32.in  config.h.in  config.h.mingw32msvc  config.h.mingw32msvc.in  configure  configure.ac  configure.in  tinysvm.pc.in  tinysvm.spec  tinysvm.spec.in
.github/workflows/: test-linux-java.yml  test-linux-perl.yml  test-linux-python.yml  test-linux-ruby.yml  test-linux.yml
doc/: Makefile  Makefile.am  Makefile.in  index.html  libtinysvm.html  svm_classify.html  svm_learn.html  svm_model.html  tinysvm.css
doc/doc/: Makefile  Makefile.am  Makefile.in  index.html  index.html~  libtinysvm.html  svm_classify.html  svm_learn.html  svm_model.html
java/: BaseExample.java  Example.java  Makefile.in  Model.java  README  TinySVM.java  TinySVM_wrap.c  TinySVM_wrap.cxx  test.java
java/org/chasen/tinysvm/: BaseExample.java  Example.java  Model.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_TinySVM__Param.java  SWIGTYPE_p_TinySVM__feature_node.java  SWIGTYPE_p_double.java  SWIGTYPE_p_p_TinySVM__feature_node.java  TinySVM.java  TinySVMConstants.java  TinySVMJNI.java
man/: Makefile.am  Makefile.in  svm_classify.1  svm_learn.1  svm_model.1
perl/: .gitignore  Changes  MANIFEST  Makefile.PL.in  README  TinySVM.pm  TinySVM.xs  TinySVM_wrap.c  TinySVM_wrap.cxx  svindex  test.pl  typemap
perl/blib/lib/: TinySVM.pm
perl/example/: hoge  model  svm_classify.pl  svm_learn.pl  svm_model.pl
python/: Makefile.pre.in  README  Setup.in  TinySVM.py  TinySVM_wrap.c  TinySVM_wrap.cxx  setup.py  test.py
ruby/: MANIFEST  Makefile  README  TinySVM.cc  TinySVM_wrap.cc  TinySVM_wrap.cpp  extconf.rb  extconf.rb.in  model  test.rb
src/: Makefile.am  Makefile.bcc32  Makefile.bcc32.in  Makefile.in  Makefile.mingw32msvc  Makefile.mingw32msvc.in  base_example.cc  base_example.h  base_solver.h  cache.h  classifier.cc  classifier.h  common.h  example.cc  example.h  gram_matrix.cc  gram_matrix.h  kernel.h  misc.h  model.cc  model.h  oneclass_solver.cc  oneclass_solver.h  param.cc  param.h  q_matrix.cc  q_matrix.h  qp_solver.cc  qp_solver.h  svm_classify.cc  svm_learn.cc  svm_model.cc  svm_solver.cc  svm_solver.h  svr_solver.cc  svr_solver.h  timer.h  tinysvm.h
swig/: Makefile  TinySVM.i
tests/: Makefile.am  Makefile.in  test.sh  test2.sh  test3.sh  test4.sh  test5.sh  train.svrdata
