dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/svm_learn.cc)
AM_INIT_AUTOMAKE(TinySVM,0.01)

# Before making a release, the LTVERSION string should be modified.
# The string is of the form C:R:A.
# - If interfaces have been changed or added, but binary compatibility has
#   been preserved, change to C+1:0:A+1
# - If binary compatibility has been broken (eg removed or changed interfaces)
#   change to C+1:0:0
# - If the interface is the same as the previous version, change to C:R+1:A

LTVERSION="1:0:0"
AC_SUBST(LTVERSION)

CFLAGS="$CFLAGS -Wall -pedantic"
CXXFLAGS="$CXXFLAGS -O3 -Wall"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET

dnl libtool
AM_PROG_LIBTOOL
AC_ISC_POSIX
AC_CYGWIN

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h math.h unistd.h stdlib.h ctype.h getopt.h sys/types.h sys/times.h windows.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions
AC_CHECK_FUNCS(isspace)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(getopt_long)
AC_CHECK_FUNCS(memset)
AC_CHECK_FUNCS(bzero)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT([Makefile src/Makefile tests/Makefile man/Makefile doc/Makefile perl/Makefile.PL
           Makefile.bcc32 config.h.bcc32 tinysvm.spec])
